--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "consola": "^2.15.3",
+    "echarts": "^5.4.2",
     "element-plus": "^2.2.32",
     "ofetch": "^1.0.1",
     "vite": "^4.1.4"
